# sdxl-newdream-20-inference

./: .gitmodules  pyproject.toml  requirements.txt
src/: pipeline.py
